En dessous du curseur, afficher l'annne en cours en changeant l'attribut de style "visibility", et non pas le contenu et la position de l'annee. Le fait de changer le contenu (e.g. "1990") faisait que le contenu etait rafraichi bien avant que la carte ne le soit. Le fait d'afficher ou masquer (sans changer la position du texte affiche) permet de contourner ce bug d'affichage de Firefox 3.0, cf. ticket:16

--- a/carte_curseur_v1/public/stylesheets/slider.css
+++ b/carte_curseur_v1/public/stylesheets/slider.css
@@ -96,18 +96,20 @@ div#slider {
 	cursor:move;
 	}
 
-#info_date{
-	 position:absolute; 
-	 left:0px; 
-	 top:-28px; /* position relative au dessus du curseur (taille curseur + taille texte) */
-	 /*
+
+/* classe info_date pour toutes les dates pre-positionnees */	
+.info_date{
+	position:absolute;
+	  /* position relative au dessus du curseur (taille curseur + taille texte) */
 	 background-color:#FFFF00;
 	 border-style:solid;
 	 border-color:#FF0000;
 	 border-width:2px;
-*/
 	 z-index:2;
 	}
+
+	
+	
 div#frise {
 	clear:both;
 	/* width:600px; on va laisser la taille s'adapter aux objets contenus (la frise en elle-meme) */
